[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://zombie (1).png" type="Texture" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1054.0
margin_bottom = 621.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -99.0
margin_right = 263.0
margin_bottom = 31.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 251.0
margin_bottom = 20.0
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 251.0
margin_bottom = 44.0
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 251.0
margin_bottom = 68.0
text = "Quit"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -511, -188 )
offset = Vector2( 511, 188 )

[node name="Zombie(1)" type="Sprite" parent="Sprite"]
position = Vector2( 1579, 546 )
scale = Vector2( 1.43402, 1.55278 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
